--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/qrcode": "^1.5.6",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
